--- a/homeoptik/templates/oscar/customer/baseaccountpage.html
+++ b/homeoptik/templates/oscar/customer/baseaccountpage.html
@@ -6,7 +6,7 @@
     {{ page_title }} | {% trans 'Account' %} | {{ block.super }}
 {% endblock %}
 
-{% block body_class %}account-profile{% endblock %}
+{#{% block body_class %}account-profile{% endblock %}#}
 
 {% block breadcrumbs %}
     <ol class="breadcrumb pull-left">
@@ -24,31 +24,40 @@
 {% block headertext %}{{ page_title }}{% endblock %}
 
 {% block column_left %}
-    <ul class="nav nav-pills nav-stacked">
-        {% block standard_tabs %}
-            <li{% if active_tab == 'profile' %} class="active"{% endif %}>
-                <a href="{% url 'customer:profile-view' %}">{% trans "Profile" %}</a>
-            </li>
-            <li{% if active_tab == 'orders' %} class="active"{% endif %}>
-                <a href="{% url 'customer:order-list' %}">{% trans "Order History" %}</a>
-            </li>
-            <li{% if active_tab == 'addresses' %} class="active"{% endif %}>
-                <a href="{% url 'customer:address-list' %}">{% trans "Address Book" %}</a>
-            </li>
-            <li{% if active_tab == 'emails' %} class="active"{% endif %}>
-                <a href="{% url 'customer:email-list' %}">{% trans "Email History" %}</a>
-            </li>
-            <li{% if active_tab == 'alerts' %} class="active"{% endif %}>
-                <a href="{% url 'customer:alerts-list' %}">{% trans "Product Alerts" %}</a>
-            </li>
-            <li{% if active_tab == 'notifications' %} class="active"{% endif %}>
-                <a href="{% url 'customer:notifications-inbox' %}">{% trans "Notifications" %}</a>
-            </li>
-            <li{% if active_tab == 'wishlists' %} class="active"{% endif %}>
-                <a href="{% url 'customer:wishlists-list' %}">{% trans "Wish Lists" %}</a>
-            </li>
-        {% endblock %}
-    </ul>
+    <nav class="ukb-nav-side navbar vnav vnav-md" role="navigation">
+        <!-- Navbar Collapse-->
+        <div class="">
+            <!-- Navbar Nav -->
+            <ul class="nav navbar-nav line-left">
+                {% block standard_tabs %}
+                    <li{% if active_tab == 'profile' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:profile-view' %}">{% trans "Profile" %}</a>
+                    </li>
+                    <li{% if active_tab == 'orders' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:order-list' %}">{% trans "Order History" %}</a>
+                    </li>
+                    <li{% if active_tab == 'addresses' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:address-list' %}">{% trans "Address Book" %}</a>
+                    </li>
+                    <li{% if active_tab == 'emails' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:email-list' %}">{% trans "Email History" %}</a>
+                    </li>
+                    <li{% if active_tab == 'alerts' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:alerts-list' %}">{% trans "Product Alerts" %}</a>
+                    </li>
+                    <li{% if active_tab == 'notifications' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:notifications-inbox' %}">{% trans "Notifications" %}</a>
+                    </li>
+                    <li{% if active_tab == 'wishlists' %} class="active"{% endif %}>
+                        <a href="{% url 'customer:wishlists-list' %}">{% trans "Wish Lists" %}</a>
+                    </li>
+                {% endblock %}
+            </ul>
+            <!-- /Navbar Nav -->
+        </div>
+        <!-- /Navbar Collapse -->
+    </nav>
+
 {% endblock %}
 
 {% block content %}
