--- a/homeoptik/templates/oscar/partials/footer.html
+++ b/homeoptik/templates/oscar/partials/footer.html
@@ -3,7 +3,7 @@
 
 <!-- Footer
 =================================================== -->
-<footer class="footer-block white-bg">
+<footer class="footer-block invert-colors bcolor-bg">
     {% block footer %}
     <!-- Container -->
     <div class="container cont-top clearfix">
