--- a/homeoptik/templates/oscar/catalogue/detail.html
+++ b/homeoptik/templates/oscar/catalogue/detail.html
@@ -18,184 +18,300 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ol class="breadcrumb pull-left">
-    <li>
-        <a href="{{ homepage_url }}"><i class="ti ti-home"></i></a>
-    </li>
-    {% with category=product.categories.all.0 %}
-        {% for c in category.get_ancestors_and_self %}
+    <ol class="breadcrumb pull-left">
         <li>
-            <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+            <a href="{{ homepage_url }}"><i class="ti ti-home"></i></a>
         </li>
-        {% endfor %}
-        <li class="active">{{ product.title }}</li>
+        {% with category=product.categories.all.0 %}
+            {% for c in category.get_ancestors_and_self %}
+                <li>
+                    <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+                </li>
+            {% endfor %}
+            <li class="active">{{ product.title }}</li>
 
-        {% get_back_button as backbutton %}
-        {% if backbutton %}
-            <li class="pull-right">
-                <a href="{{ backbutton.url }}">
-                    <i class="icon-arrow-left"></i> {{ backbutton.title }}
-                </a>
-            </li>
-        {% endif %}
-    {% endwith %}
-</ol>
+            {% get_back_button as backbutton %}
+            {% if backbutton %}
+                <li class="pull-right">
+                    <a href="{{ backbutton.url }}">
+                        <i class="icon-arrow-left"></i> {{ backbutton.title }}
+                    </a>
+                </li>
+            {% endif %}
+        {% endwith %}
+    </ol>
 {% endblock %}
 
 {% block header %}
 {% endblock header %}
 
+{% block section_class %}{{ block.super }} has-sidebar{% endblock %}
+
 {% block content %}
-
-<article class="product_page"><!-- Start of product page -->
-
-    <div class="row">
+    <!-- Product Row -->
+    <div class="row product-details">
 
         {% block product_gallery %}
-        <div class="col-sm-6">
             {% include "catalogue/partials/gallery.html" %}
-        </div>
         {% endblock %}
 
         {% block product_main %}
-        <div class="col-sm-6 product_main">
-            {% comment %}
-            This is a but clunky here.  Better to have some kind of JS-driven dashboard menu that 
-            pops out when clicked.  A bit like the Django-Debug-Toolbar button
-            {% endcomment %}
-            {% if user.is_authenticated and user.is_staff %}
-                <a class="pull-right hidden-xs" href="{% url 'dashboard:catalogue-product' pk=product.id %}"><small><i class="icon-edit"></i> {% trans "Edit this product" %}</small></a>
-            {% endif %}
-            <h1>{{ product.get_title }}</h1>
 
-            {% block product_stock_record %}
-                {% include "catalogue/partials/stock_record.html" with verbose=1 %}
-            {% endblock %}
+            <!-- Col -->
+            <div class="col-md-7">
+                {% iffeature "reviews" %}
+                    {% include "catalogue/reviews/partials/review_stars.html" %}
+                {% endiffeature %}
 
-            {% iffeature "reviews" %}
-                {% include "catalogue/reviews/partials/review_stars.html" %}
-            {% endiffeature %}
+                <h3 class="product-title">
+                    {{ product.get_title }}
+                    {% if user.is_authenticated and user.is_staff %}
+                        <a class="pull-right hidden-xs" href="{% url 'dashboard:catalogue-product' pk=product.id %}">
+                            <small><i class="fa fa-edit"></i> {% trans "Edit this product" %}</small>
+                        </a>
+                    {% endif %}
+                </h3>
 
-            <hr/>
 
-            {% block product_basket_form %}
-                {% include "catalogue/partials/add_to_basket_form.html" %}
-            {% endblock %}
-        </div><!-- /col-sm-6 -->
+                {% block product_stock_record %}
+                    {% include "catalogue/partials/stock_record.html" with verbose=1 %}
+                {% endblock %}
+
+                <!-- Accordion -->
+                <div class="panel-group" id="accordion">
+
+                    {% block product_description %}
+                        {% if product.description %}
+                            <!-- Panel -->
+                            <div class="panel panel-default">
+
+                                <!-- Heading -->
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                            {% trans "Product Description" %}
+                                        </a>
+                                    </h4>
+                                </div>
+                                <!-- /Heading -->
+
+                                <!-- Collapse -->
+                                <div id="collapseOne" class="panel-collapse collapse in">
+                                    <div class="panel-body">
+                                        {{ product.description|safe }}
+                                    </div>
+                                </div>
+                                <!-- /Collapse -->
+
+                            </div>
+                            <!-- /Panel -->
+                        {% endif %}
+                    {% endblock %}
+
+                    {% block product_info %}
+                        <!-- Panel -->
+                        <div class="panel panel-default">
+                            <!-- Heading -->
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                                        {% trans "Product Information" %}
+                                    </a>
+                                </h4>
+                            </div>
+                            <!-- /Heading -->
+
+                            <!-- Collapse -->
+                            <div id="collapseTwo" class="panel-collapse collapse">
+                                {#                                <div class="panel-body">#}
+
+                                <table class="table">
+                                    {% if product.upc %}
+                                        <tr>
+                                            <th>{% trans "UPC" %}</th><td>{{ product.upc }}</td>
+                                        </tr>
+                                    {% endif %}
+                                    <tr>
+                                        <th>{% trans "Product Type" %}</th><td>{{ product.get_product_class.name|lower }}</td>
+                                    </tr>
+
+                                    {% purchase_info_for_product request product as session %}
+                                    {% if session.price.exists %}
+                                        <tr>
+                                            <th>{% trans "Price (excl. tax)" %}</th><td>{{ session.price.excl_tax|currency:session.price.currency }}</td>
+                                        </tr>
+                                        {% if session.price.is_tax_known %}
+                                            <tr>
+                                                <th>{% trans "Price (incl. tax)" %}</th><td>{{ session.price.incl_tax|currency:session.price.currency }}</td>
+                                            </tr>
+                                            <tr>
+                                                <th>{% trans "Tax" %}</th><td>{{ session.price.tax|currency:session.price.currency }}</td>
+                                            </tr>
+                                        {% endif %}
+                                        <tr>
+                                            <th>{% trans "Availability" %}</th>
+                                            <td>{{ session.availability.message }}</td>
+                                        </tr>
+                                    {% endif %}
+                                    {% for av in product.attribute_values.all %}
+                                        <tr>
+                                            <th>{{ av.attribute.name }}</th>
+                                            <td>{{ av.value_as_text|lower }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                    {% iffeature "reviews" %}
+                                        <tr>
+                                            <th>{% trans "Number of reviews" %}</th>
+                                            <td>{{ product.num_approved_reviews }}</td>
+                                        </tr>
+                                    {% endiffeature %}
+                                </table>
+
+                                {#                                </div>#}
+                            </div>
+                            <!-- /Collapse -->
+
+                        </div>
+                        <!-- /Panel -->
+                    {% endblock %}
+
+                </div>
+                <!-- /Accordion -->
+
+                {% block product_basket_form %}
+                    <h4>Купить сейчас</h4>
+                    {% include "catalogue/partials/add_to_basket_form.html" %}
+                {% endblock %}
+            </div>
+            <!-- /Col -->
+
         {% endblock %}
 
-    </div><!-- /row -->
-
-    {% block product_description %}
-        {% if product.description %}
-        <div id="product_description" class="sub-header">
-            <h2>{% trans "Product Description" %}</h2>
-        </div>
-        <p>{{ product.description|safe }}</p>
-        {% endif %}
-    {% endblock %}
-
-    {% block product_info %}
-    <div class="sub-header">
-        <h2>{% trans "Product Information" %}</h2>
     </div>
-    <table class="table table-striped">
-        {% if product.upc %}
-        <tr>
-            <th>{% trans "UPC" %}</th><td>{{ product.upc }}</td>
-        </tr>
-        {% endif %}
-        <tr>
-            <th>{% trans "Product Type" %}</th><td>{{ product.get_product_class.name }}</td>
-        </tr>
+    <!-- /Product Row -->
+    <hr class="y-200pc">
 
-        {% purchase_info_for_product request product as session %}
-        {% if session.price.exists %}
-            <tr>
-                <th>{% trans "Price (excl. tax)" %}</th><td>{{ session.price.excl_tax|currency:session.price.currency }}</td>
-            </tr>
-            {% if session.price.is_tax_known %}
-                <tr>
-                    <th>{% trans "Price (incl. tax)" %}</th><td>{{ session.price.incl_tax|currency:session.price.currency }}</td>
-                </tr>
-                <tr>
-                    <th>{% trans "Tax" %}</th><td>{{ session.price.tax|currency:session.price.currency }}</td>
-                </tr>
-            {% endif %}
-            <tr>
-                <th>{% trans "Availability" %}</th>
-                <td>{{ session.availability.message }}</td>
-            </tr>
-        {% endif %}
-        {% for av in product.attribute_values.all %}
-            <tr>
-                <th>{{ av.attribute.name }}</th>
-                <td>{{ av.value_as_html }}</td>
-            </tr>
-        {% endfor %}
+    <!-- Row -->
+    <div class="row">
+
         {% iffeature "reviews" %}
-            <tr>
-                <th>{% trans "Number of reviews" %}</th>
-                <td>{{ product.num_approved_reviews }}</td>
-            </tr>
-        {% endiffeature %}
-    </table>
-    {% endblock %}
+            {% block product_review %}
+                <!-- Main Col -->
+                <div id="main-col" class="col-md-9 mgb-30-xs">
 
-    {% iffeature "reviews" %}
-        {% block product_review %}
-        <section>
-            <div id="reviews" class="sub-header">
-                {% if product.num_approved_reviews > 3 %}
-                    <a href="{% url 'catalogue:reviews-list' product_slug=product.slug product_pk=product.id %}" class="btn pull-right">{% trans "See all reviews" %}</a>
-                {% endif %}
-                <h2>{% trans "Customer Reviews" %}</h2>
-            </div>
-
-            {% if product.num_approved_reviews == 0 %}
-                <p>
-                    {% if product|is_review_permitted:user %}
-                        {% url 'catalogue:reviews-add' product_slug=product.slug product_pk=product.id as add_review_url %}
-                            {% blocktrans %}This product does not have any reviews yet -
-                            <a href="{{ add_review_url }}#addreview">be the first to write one</a>.
-                        {% endblocktrans %}
-                    {% else %}
-                        {% trans "This product does not have any reviews yet" %}.
+                    <h4>Отзывы ({{ product.num_approved_reviews }})</h4>
+                    {% if product.num_approved_reviews > 3 %}
+                        <a href="{% url 'catalogue:reviews-list' product_slug=product.slug product_pk=product.id %}" class="btn pull-right">{% trans "See all reviews" %}</a>
                     {% endif %}
-                </p>
-            {% else %}
-                <ol class="list-unstyled review-list">
-                    {% for review in reviews|slice:":3" %}
-                        <li>
-                        {% include 'catalogue/partials/review.html' %}
-                        </li>
-                    {% endfor %}
-                </ol>
-            {% endif %}
-        </section>
-        {% endblock product_review %}
-    {% endiffeature %}
 
-    {% with recommended_products=product.recommended_products.all|slice:":6" %}
-        {% if recommended_products %}
-            <div class="sub-header">
-                <h2>{% trans "Recommended items" %}</h2>
-            </div>
-            <ul class="row">
-                {% for product in recommended_products %}
-                <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                    {% render_product product %}
-                </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
+                    {% if product.num_approved_reviews == 0 %}
+                        <p>
+                            {% if product|is_review_permitted:user %}
+                                {% url 'catalogue:reviews-add' product_slug=product.slug product_pk=product.id as add_review_url %}
+                                {% blocktrans %}This product does not have any reviews yet -
+                                    <a href="{{ add_review_url }}#addreview">be the first to write one</a>.
+                                {% endblocktrans %}
+                            {% else %}
+                                {% trans "This product does not have any reviews yet" %}.
+                            {% endif %}
+                        </p>
+                    {% else %}
+                        <!-- Comments List -->
+                        <ol class="comments-list">
+                            {% for review in reviews|slice:":3" %}
+                                {% include 'catalogue/partials/review.html' %}
+                            {% endfor %}
+                        </ol>
+                        <!-- Comments List / END -->
+                    {% endif %}
+{##}
+{#                    <h4 class="case-c">add comment</h4>#}
+{##}
+{#                    <!-- Comment Form -->#}
+{#                    <div class="contact-form">#}
+{#                        <form>#}
+{#                            <!-- Row -->#}
+{#                            <div class="row">#}
+{#                                <!-- Col -->#}
+{#                                <div class="col-md-6">#}
+{#                                    <div class="form-group">#}
+{#                                        <input placeholder="Your Name - Required" class="form-control" type="text">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <!-- /Col -->#}
+{#                                <!-- Col -->#}
+{#                                <div class="col-md-6">#}
+{#                                    <div class="form-group">#}
+{#                                        <input placeholder="Your Email - Required" class="form-control" type="text">#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <!-- /Col -->#}
+{#                            </div>#}
+{#                            <!-- /Row -->#}
+{##}
+{#                            <div class="form-group">#}
+{#                                <textarea placeholder="You Message..." class="form-control" rows="8"></textarea>#}
+{#                            </div>#}
+{##}
+{#                            <button class="btn btn-default  btn-bigger" type="submit">Submit comment</button>#}
+{#                        </form>#}
+{#                    </div>#}
+{#                    <!-- /Contact Form -->#}
+                </div>
+                <!-- /Main Col -->
+            {% endblock product_review %}
+        {% endiffeature %}
+
+        {% with recommended_products=product.recommended_products.all|slice:":6" %}
+            {% if recommended_products %}
+                <!-- Side Col -->
+                <div class="col-md-3">
+
+                    <!-- Side Widget -->
+                    <div class="side-widget">
+
+                        <h5 class="boxed-title">{% trans "Recommended items" %}</h5>
+
+                        <!-- Slider Wrapper -->
+                        <div class="side-products-slider bx-controls-above-right product-no-margin">
+
+                            <!-- BxSlider -->
+                            <div class="bxslider" data-call="bxslider" data-options="{pager:false}">
+                                {% for product in recommended_products %}
+                                    <!-- Slide -->
+                                    <div class="slide">
+                                        {% render_product product %}
+                                    </div>
+                                    <!-- /Slide -->
+                                {% endfor %}
+                            </div>
+                            <!-- /BxSlider -->
+
+                        </div>
+                        <!-- /Slider Wrapper -->
+
+                    </div>
+                    <!-- /Side Widget -->
+
+                </div>
+                <!-- /Side Col -->
+            {% endif %}
+        {% endwith %}
+
+    </div>
+    <!-- /Row -->
 
     {% recently_viewed_products %}
 
-</article><!-- End of product page -->
 {% endblock content %}
 
 {% block extrascripts %}
     {{ block.super }}
 {% endblock %}
+
+
+
+
+
+
+
