--- a/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form.html
+++ b/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form.html
@@ -6,12 +6,12 @@
 
 {% if session.availability.is_available_to_buy %}
     {% basket_form request product as basket_form %}
-    <form id="add_to_basket_form" action="{% url 'basket:add' pk=product.pk  %}" method="post" class="add-to-basket">
+    <form id="add_to_basket_form" action="{% url 'basket:add' pk=product.pk  %}" method="post" class="pull-left">
         {% csrf_token %}
         {% include "partials/form_fields.html" with form=basket_form %}
-        <button type="submit" class="btn btn-lg btn-primary btn-add-to-basket" value="{% trans "Add to basket" %}" data-loading-text="{% trans 'Adding...' %}">{% trans "Add to basket" %}</button>
+        <button type="submit" class="btn btn-default btn-bigger" value="{% trans "Add to basket" %}" data-loading-text="{% trans 'Adding...' %}"><i class="icon-left ti ti-shopping-cart"></i>{% trans "Add to basket" %}</button>
     </form>
-    {% include "catalogue/partials/add_to_wishlist.html" %}
+{#    {% include "catalogue/partials/add_to_wishlist.html" %}#}
 {% else %}
     {% if has_active_alert %}
         <p>{% trans "You have an active stock alert for this product." %}</p>
@@ -20,8 +20,8 @@
             {% csrf_token %}
             <p>{% trans "You can get an email alert when this product is back in stock." %}</p>
             {% include "partials/form_fields.html" with form=alert_form %}
-            <button type="submit" class="btn btn-lg btn-info btn-add-to-basket" data-loading-text="{% trans 'Submitting...' %}">{% trans "Notify me" %}</button>
+            <button type="submit" class="btn btn-default btn-bigger" data-loading-text="{% trans 'Submitting...' %}"><i class="icon-left ti ti-email"></i>{% trans "Notify me" %}</button>
         </form>
     {% endif %}
-    {% include "catalogue/partials/add_to_wishlist.html" %}
+{#    {% include "catalogue/partials/add_to_wishlist.html" %}#}
 {% endif %}
