--- a/homeoptik/templates/oscar/customer/history/recently_viewed_products.html
+++ b/homeoptik/templates/oscar/customer/history/recently_viewed_products.html
@@ -1,16 +1,18 @@
 {% load i18n %}
 {% load product_tags %}
 
-{% with products_sliced=products|slice:":6" %}
+{% with products_sliced=products|slice:":4" %}
     {% if products_sliced %}
-        <div class="sub-header">
-            <h2>{% trans 'Products you recently viewed' %}</h2>
-        </div>
+        <h5 class="boxed-title">{% trans 'Products you recently viewed' %}</h5>
 
-        <ul class="row">
+        <div class="row">
             {% for product in products_sliced %}
-                <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">{% render_product product %}</li>
+                <div class="col-sm-6 col-md-3">
+                    {% render_product product %}
+                </div>
             {% endfor %}
-        </ul>
+        </div>
     {% endif %}
 {% endwith %}
+
+
