--- a/homeoptik/templates/oscar/partials/search.html
+++ b/homeoptik/templates/oscar/partials/search.html
@@ -3,7 +3,7 @@
 <div class="left-col">
     <div class="vcenter">
         <div class="vcenter-this">
-            <span class="header-text case-u mgb-10 hidden-xs hidden-sm"><i class="icon-left fa fa-fax bcolor-l"></i>помощь : <span class="pcolor">+7 (499) 391-19-41</span></span>
+            <span class="header-text case-u mgb-10 hidden-xs hidden-sm"><i class="icon-left fa fa-fax bcolor-l"></i>Пн-Вс 10:00-19:00 : <span class="pcolor">+7 (499) 391-19-41</span></span>
             <form method="get" action="{% url 'search:search' %}" class="header-search">
                 <div class="form-group">
                     {{ search_form.q }}
