--- a/homeoptik/templates/oscar/partials/footer.html
+++ b/homeoptik/templates/oscar/partials/footer.html
@@ -3,7 +3,7 @@
 
 <!-- Footer
 =================================================== -->
-<footer class="footer-block invert-colors bcolor-bg">
+<footer class="footer-block">
     {% block footer %}
     <!-- Container -->
     <div class="container cont-top clearfix">
@@ -84,7 +84,7 @@
     <!-- /Container -->
 
     <!-- Bottom -->
-    <div class="footer-bottom bcolor-bg invert-colors">
+    <div class="footer-bottom invert-colors bcolor-bg">
 
         <!-- Container -->
         <div class="container">
