--- a/homeoptik/templates/oscar/promotions/home.html
+++ b/homeoptik/templates/oscar/promotions/home.html
@@ -1,14 +1,90 @@
-{% extends "layout_2_col.html" %}
+{% extends "layout.html" %}
 {% load i18n %}
+{% load staticfiles %}
+{##}
+{#{% block navigation %}#}
+{#    {% include "partials/nav_primary.html" with expand_dropdown=1 %}#}
+{#{% endblock %}#}
+{% block content_wrapper %}
+    <!-- Intro Block
+     ============================================ -->
+    <div class="intro-block mgb-20">
 
-{% block navigation %}
-    {% include "partials/nav_primary.html" with expand_dropdown=1 %}
+        <!-- Container -->
+        <div class="container">
+
+            <!-- Slider Wrapper -->
+            <div class="intro-slider">
+
+                <!-- BxSlider -->
+                <div class="bxslider" data-call="bxslider" data-options="{pager:false, mode:'fade'}">
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/slides/slide1.jpg" %}" alt=""/><!-- slider image + background -->
+                        <!-- Text -->
+                        <div class="text">
+                            <div class="vcenter">
+                                <div class="vcenter-this text-block">
+                                    <h5 class="bx-layer" data-anim="bounceInLeft" data-dur="1000" data-delay="700">from 5th March - 26 March</h5>
+                                    <h1 class="bx-layer" data-anim="bounceInDown" data-dur="1000" data-delay="100">fresh from the runway</h1><br/>
+                                    <p class="bx-layer" data-anim="bounceInRight" data-dur="1000" data-delay="500">Helena is a freelance fashion house specialisings in print designs and fabrics.</p>
+                                    <a class="btn btn-base bx-layer" data-anim="bounceInUp" data-dur="1000" data-delay="1000">shop now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /Text -->
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/slides/slide2.jpg" %}" alt=""/><!-- slider image + background -->
+                        <!-- Text -->
+                        <div class="text">
+                            <div class="vcenter">
+                                <div class="vcenter-this text-block">
+                                    <h5 class="bx-layer" data-anim="bounceInLeft" data-dur="1000" data-delay="700">from 5th March - 26 March</h5>
+                                    <h1 class="bx-layer" data-anim="bounceInDown" data-dur="1000" data-delay="100">designer clothes only</h1><br/>
+                                    <p class="bx-layer" data-anim="bounceInRight" data-dur="1000" data-delay="500">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur veli..</p>
+                                    <a class="btn btn-white bx-layer" data-anim="bounceInUp" data-dur="1000" data-delay="1000">shop now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /Text -->
+                    </div>
+                    <!-- /Slide -->
+
+                    <!-- Slide -->
+                    <div class="slide">
+                        <img class="img-main" src="{% static "images/slides/slide3.jpg" %}" alt=""/><!-- slider image + background -->
+                        <!-- Text -->
+                        <div class="text">
+                            <div class="vcenter">
+                                <div class="vcenter-this text-block">
+                                    <h5 class="bx-layer" data-anim="bounceInLeft" data-dur="1000" data-delay="700">from 5th March - 26 March</h5>
+                                    <h1 class="bx-layer" data-anim="bounceInDown" data-dur="1000" data-delay="100">hot summer collection</h1><br/>
+                                    <p class="bx-layer" data-anim="bounceInRight" data-dur="1000" data-delay="500">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur veli..</p>
+                                    <a class="btn btn-primary bx-layer" data-anim="bounceInUp" data-dur="1000" data-delay="1000">shop now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /Text -->
+                    </div>
+                    <!-- /Slide -->
+
+                </div>
+                <!-- /BxSlider -->
+
+            </div>
+            <!-- Slider Wrapper -->
+
+        </div>
+        <!-- /Container -->
+
+    </div>
+    <!-- /Intro Block
+    ============================================ -->
+
+
 {% endblock %}
-
-{% block header %}{% endblock %}
-
-{% block column_left %}
-{% endblock %}
-
-{% block content %}
-{% endblock content %}
